# morse-fl

./: CMakeLists.txt  README.md  app.overlay  prj.conf
inc/: app_main.h  ca_certificate.h  convolution_layer.h  custom_font.h  dns.h  form.h  fullyconnected_layer.h  hardware.h  http.h  json.h  mqtt.h  task.h  version.h  weight_bias.h
src/: app_main.cpp  convolution_layer.cpp  custom_font.cpp  dns.cpp  fullyconnected_layer.cpp  genann.c  hardware.cpp  http.cpp  json.cpp  main.c  mqtt.cpp  space_grotesk_72.c  task.cpp
